# seeding-reward-bot

./: .dockerignore  .gitignore  Containerfile  Dockerfile  README.md  config.toml  docker-compose.yml  entrypoint.sh  example-compose.yml  example-config.toml  example.env  pyproject.toml  setup.py
docs/: CNAME  Makefile  conf.py  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/html/: .buildinfo
docs/html/_sources/: index.rst.txt
fishbot/: __init__.py  discord_bot.py
fishbot/clients/: hll_rcon.py
fishbot/cogs/: hell_let_loose.py  ping.py
glowbot/: __init__.py  bot.py  commands.py  config.py  db.py  dbconnector.py  discord_bot.py  hell_let_loose.py  hll_gameservice.py  hll_rcon_client.py  main.py  tasks.py
glowbot/cogs/: hell_let_loose.py  ping.py
glowbot/plugins/: __init__.py  ping.py
migrations/seedbot/: 0_20251119192555_init.py  1_20251121010128_rename-steam_id_64-to-player_id.py  2_20251121020724_player_id-description.py  3_20251127223901_discord_id-bigint.py  4_20260102181158_unique-player_id-and-discord_id.py  5_20260112204833_leaderboard.py
seedbot/: commands.py  config.py  db.py  hll_rcon_client.py  main.py  tasks.py
seeding_reward_bot/: commands.py  config.py  db.py  hll_rcon_client.py  main.py  tasks.py
src/seeding_reward_bot/: commands.py  config.py  db.py  hll_rcon_client.py  main.py  tasks.py
src/seeding_reward_bot/commands/: casino.py  hll.py  hll_admin.py  util.py
