[project]
name = "seeding-reward-bot"
version = "0.2.0"
description = "Discord Bot for encouraging and rewarding seeding for select games."
authors = [
    { name = "Robb Manes", email = "robbmanes@protonmail.com" },
    { name = "Kevin Brasier", email = "wonderfulweb@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "aerich[toml]>=0.9.2",
    "audioop-lts>=0.2.2 ; python_full_version >= '3.13'",
    "httpx>=0.28.1",
    "py-cord>=2.6.1",
    "stamina>=25.1.0",
    "tortoise-orm[asyncpg]>=0.25.1",
]

[project.scripts]
seedbot = "seeding_reward_bot.main:run_discord_bot"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[tool.aerich]
tortoise_orm = "seeding_reward_bot.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
